feat: Introduces icon set, and options for ignoring pinned tabs, limiting to tabs in current window, and adjusting how many history items are considered.

--- a/ui/ui.css
+++ b/ui/ui.css
@@ -76,6 +76,9 @@ body {
     font-size: 14px;
     outline: none;
     min-width: 50px;
+    max-height: 130px;
+    overflow-y: auto;
+    resize: vertical;
 }
 
 #focus-editor:empty:before {
